--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              "어쩌다 장업계 마케터"
+title:              "어쩌다, 장업계 마케터"
 tagline:            "블로그 슬로건"
 email:              "shunaem2@gmail.com"
 description:        "블로그 설명"
