레이아웃 업데이트

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title:              "어쩌다, 장업계 마케터"
-tagline:            "블로그 슬로건"
+title:              "어쩌다 장업계 마케터"
+tagline:            "막연히 마케터가 되고싶다면, 혹은 장업계에서 일하고싶다면?"
 email:              "shunaem2@gmail.com"
-description:        "블로그 설명"
-author:             "작성자 이름"
+description:        "철이 없었죠, 화장품이 좋아서 취업을 했다는게"
+author:             "슈냄"
 baseurl:            "/"
 url:                "https://shunaem.com"
 locale:             "ko_KR"
