--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,7 @@ paginate:           5
 paginate_path:      "/posts/page:num/"
 plugins:
   - jekyll-paginate
+
+# 블로그 disqus shortname
+disqus:
+  shortname: shunaem-com
