--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              "어쩌다 장업계 마케터"
-tagline:            "막연히 마케터가 되고싶다면, 혹은 장업계에서 일하고싶다면?"
+tagline:            "장업계or마케팅에 관심이 있다면?"
 email:              "shunaem2@gmail.com"
 linkedin_username:  "https://www.linkedin.com/in/%EC%9C%A4%EC%88%98-%EC%86%A1-a834741b1/"
 description:        "철이 없었죠, 화장품이 좋아서 취업을 했다는게"
